Prevent bounce scrolling body on iOS

--- a/src/styles/base/doc.scss
+++ b/src/styles/base/doc.scss
@@ -8,6 +8,10 @@
   overflow-x: hidden;
 }
 
+html, body {
+  position: fixed; // prevent bounce scrolling on iOS
+}
+
 html, body, #root, #app, .page {
   @extend %fullscreen;
 }
